removed unused form elements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1 id="date">HTML5 forms:</h1>
 
-  <form action="#" method="get" id="the-form">
+  <form id="the-form">
     <fieldset>
       <label for="datePicker">Choose a new date:</label>
       <input type="date" id="datePicker">
@@ -17,7 +17,6 @@
     <fieldset>
       <input type="color" id="colour" value="#eeccff">
       <input type="range" id="range" max="100" value="50">
-      <output for="range" id="output"></output>
     </fieldset>
   </form>
   <p id="the-value" class="value">50</p>
