added Fania's refactored version of the solution

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       <input type="range" id="range" max="100" value="50">
     </fieldset>
   </form>
-  <p id="the-value" class="value">50</p>
+  <p id="the-value" class="value">50%</p>
 
-<script src="js/scripts.js"></script>
+<!-- <script src="js/dave-sol.js"></script> -->
+<script src="js/fania-sol.js"></script>
 </body>
 </html>
