added comment to html to trigger page build

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <fieldset>
       <input type="color" id="theColour" value="#eeccff" list="colours">
+      <!-- a datalist offers preset choices: -->
       <datalist id="colours">
         <option value="#ff0000">
         <option value="#00ff00">
