--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <input type="range" id="theRange" max="100" value="50">
   </fieldset>
   </form>
-  <p id="the-value" class="value">50</p>
+  <p id="colourBox" class="value">50%</p>
 
   <script src="js/inputs.js"></script>
 </body>
